tests/build/cases/widget_new/unknown_field.stderr
error[E0599]: no method named `unknown` found for struct `zero_ui::properties::margin_inputs__` in the current scope
 --> cases/widget_new/unknown_field.rs:7:13
  |
7 |             unknown: 0,
  |             ^^^^^^^ method not found in `margin_inputs__`
